--- a/q/275853.html
+++ b/q/275853.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
-<tr d-ix="1"><td>012</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
+<tr d-ix="0"><td>010</td><td>Nekomata</td><td>240929T080511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275867#275867">alephalp</a></td></tr>
+<tr d-ix="1"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
 <tr d-ix="2"><td>086</td><td>Arturo</td><td>240928T231918Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275864#275864">chunes</a></td></tr>
 <tr d-ix="3"><td>085</td><td>JavaScript Node.js</td><td>240928T222801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275863#275863">l4m2</a></td></tr>
 <tr d-ix="4"><td>091</td><td>JavaScript ES6</td><td>240928T214333Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275861#275861">Arnauld</a></td></tr>
@@ -35,7 +35,39 @@
 <tr d-ix="6"><td>016</td><td>Jelly</td><td>240928T190640Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275859#275859">Unrelate</a></td></tr>
 <tr d-ix="7"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 10 bytes</h1>
+<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
+</code></pre>
+
+<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
+<p>This requires <a href="https://github.com/AlephAlpha/Nekomata/releases/tag/v0.7.0.0" rel="nofollow noreferrer">Nekomata v0.7.0.0</a>, which is not yet on ATO.</p>
+<p>Takes input as <code>z [a,b,c]</code>.</p>
+<pre><code>ᵑʰ→:ṁ7ᵃc∙Å
+ᵑ               Apply the following function z times:
+ ʰ→               Increment any element of the list [a,b,c]
+   :            Duplicate
+    ṁ           Minimum
+     7          Push 7
+      ᵃ         Apply the following function to both the minimum and 7:
+       c          Prepend to the duplicated list
+        ∙       Dot product
+         Å      Find the largest possible value
+</code></pre>
+<p><code>ʰ</code> (<code>\onAny</code>) is a new built-in particle in Nekomata v0.7.0.0. It applies a function to any element of a list non-deterministically.</p>
+<hr />
+<h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
+<pre><code>3$ŧĦ+:ṁ7ᵃc∙Å
+</code></pre>
+<p>-2 bytes thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">@Unrelated String</a>.</p>
+<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6FluNVY4uP7JM2-rhzkbzh1ubkx91zDzcuqQ4KbkYqmLBzYsGCtEGOqY6BrFcYJaBjlkslyGymLGOkY4hmGUCZxnrGMNZRjpGYB0IdaZIOoyR9ELUmWCRNdYxQTIZZh6aXoQs1F5juL1AMSOYCyA-AwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>3$ŧĦ+
+3$ŧ     Find a z-tuple of [0,1,2]
+   Ħ    Histogram; count the occurrences of each of 0, 1, 2
+    +   Add that to [a,b,c]
+</code></pre>
+<p>The other part is the same as the previous solution.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
 <pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
 </code></pre>
 <p><a href="https://tio.run/##VY0xDsIwDEV3TuHRlsxAOzB0RAwMRRFwgVAFNSJJS1IXbh9KAQn@5if/95tWx6bTLmclqUVhqHWPJcMu9DLsxZ9NRCKqFpcuAv5TmNnBjCYmg/IFJcGv7MqgnCT0DNubaJfQMQSapSraMOBGpwFr/bBePL4q8qkcp1t192nMMhREDCfrTcL1ZLZhfrf0TpVzCQWsoMjL0T0B" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -68,36 +100,6 @@ x+3 x+2 x 2 -&gt; x+3 x+2 x+2
 x+3 x+3 x 2 -&gt; x+3 x+3 x+2
 </code></pre>
 <p>Otherwise, add two to the largest value. Note that the exceptions mentioned above are the first row of the above table and also <code>x+3 x+1 x</code> which should become <code>x+5 x+1 x</code> instead of <code>x+4 x+1 x+1</code>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 12 bytes</h1>
-<pre><code>ᵑʰ→::∙$ṁ7*+Å
-</code></pre>
-
-<p>This requires <a href="https://github.com/AlephAlpha/Nekomata/releases/tag/v0.7.0.0" rel="nofollow noreferrer">Nekomata v0.7.0.0</a>, which is not yet on ATO.</p>
-<p>Takes input as <code>z [a,b,c]</code>.</p>
-<pre><code>ᵑʰ→::∙$ṁ7*+Å
-ᵑ               Apply the following function z times:
- ʰ→               Increment any element of the list [a,b,c]
-   :            Duplicate
-    :∙          Square sum; take the dot product with itself
-      $         Swap
-       ṁ        Minimum
-        7*      Multiply by 7
-          +     Add
-           Å    Find the largest possible value
-</code></pre>
-<p><code>ʰ</code> (<code>\onAny</code>) is a new built-in particle in Nekomata v0.7.0.0. It applies a function to any element of a list non-deterministically.</p>
-<hr />
-<h2><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> v0.6.0.0, 14 bytes</h2>
-<pre><code>3$ŧĦ+::∙$ṁ7*+Å
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6FluNVY4uP7JM28rqUcdMlYc7G821tA-3LilOSi6Gqlhw86KBQrSBjqmOQSwXmGWgYxbLZYgsZqxjpGMIZpnAWcY6xnCWkY4RWAdCnSmSDmMkvRB1JlhkjXVMkEyGmYemFyELtdcYbi9QzAjmAojPAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>3$ŧĦ+
-3$ŧ     Find a z-tuple of [0,1,2]
-   Ħ    Histogram; count the occurrences of each of 0, 1, 2
-    +   Add that to [a,b,c]
-</code></pre>
-<p>The other part is the same as the previous solution.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 86 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$[a,z]-&gt;?z=0-&gt;+∑map a=&gt;[&amp;^2]7*min a-&gt;max map 3'i[f map 3'j-&gt;+?i=j-&gt;1-&gt;0a\[j-1]z-1]
