--- a/q/275871.html
+++ b/q/275871.html
@@ -26,11 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
-<tr d-ix="1"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
-<tr d-ix="2"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
+<tr d-ix="0"><td>106</td><td>JavaScript Node.js</td><td>240930T063843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275877#275877">l4m2</a></td></tr>
+<tr d-ix="1"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
+<tr d-ix="2"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
+<tr d-ix="3"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>28</s> 27 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 106 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;(g=i=&gt;s[i++*2]?g(i)+s.map(c=&gt;(++j&amp;-j)==i?(g=2*i,c):(x=j&amp;g-1)-i?x+i^g?' ':'\\':'/',j=0).join``+`
+`:'')``
+</code></pre>
+<p><a href="https://tio.run/##DcrBEoIgFEDRfV/RygciVC5tkA9RGwiVHik40TT@Pbm5m3O9@ZlkP7h9eYjjlGeZk2yJkyjb1CFjZT0oR5CyJFazEXsgY77gnkqJ6hjrEitLG7JLXzh@oxzVzvDhFJyhgb4/coHKyysVPmLQmumTbgCo1vluY0hxmcQSHZlJJ4QA87TjNLsX@veyhggDpfkP" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Actually I don't understand ...</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>31</s> <s>28</s> 27 bytes</h1>
 <pre><code>Jm2BỊḄJ=&amp;ɗⱮJḤṚ|Ɗị&quot;Ø^;;⁶Ʋ€UZ
 </code></pre>
 <p><a href="https://tio.run/##fY4/S8NQFMX39zFEzd61FNStmRWJg3BNbvJe@/6Ud2@MEZeKINQPoLi4iJMIikil0CVQ8GMkXyS@0cnlwrnn8DtnglrXfR@bwUG7WrTLm3i0@3Pfvb/F7fK5/X682iza1d1W83A6HHbzr81Hd/16dNK3q8/mNtkOYtLN10L0PYizNBMy4FzlBASBeSHVZKqNdYKlIkbiFAglEGi0Bcvw9Vw7iyL0Ny/t8mkQWnf2mnU8igN7@78NiTj8A1UElXSzmbIFqQuuWXrEVIKHlNGTdrZQZCNmCQwGLkMujAViP6aoNMxaeoXWTUmxhSLkc0wy50qqfLjnOsuCGyGPC8B9TjiXx6okl2tvnTYlpNbWzk3ZyAKND21lVPPYTUyJhFxVFpxlyxCxR9JSV/Uv" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -57,7 +66,7 @@ Jm2BỊḄ              This creates a bitmask for the period of that column.
           Z    and transpose.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> <s> 143 </s> 142 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 158 </s> <s> 144 </s> <s> 143 </s> 142 bytes</h1>
 <p><em>-14 bytes by Unrelated String.</em><br />
 <em>-2 bytes by emanresu A.</em></p>
 
@@ -65,10 +74,10 @@ Jm2BỊḄ              This creates a bitmask for the period of that column.
 </code></pre>
 <p><a href="https://tio.run/##JcpBDoMgEEDRqxA3gLUa7aYx8STIAhUViwMZ2LRNe3Wq6e4n//lnXB3c7h5Tip1V@zApElqGbWc1sMCrquEKJmHLUUPUyPD6RT47JJYYEEGglBcx0@qdkSw3n76n5zTHJKhg0awusGj4qfJdeUYJLTdnoHgZzyILokXJizPwUreScy4diiCTRwOR0R7@/rBUDeOk52U128Pu4OiB0w8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 25 bytes</h1>
 <pre><code>Ｆ²ＦＬθ«Ｊκ⁻¹＆⊕κ±⊕κ¿ι§θκＰ^±ⅉ
 </code></pre>
-<p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<p><a href="https://tio.run/##XU67DoIwFJ3hK@54m@Cgo0y4YcQ4uLiYNHCBhtJCe/ER47dXZHDwLCc5r5yyla60UodQWwe4EbDwgUzDLY5CwCuO9lM/nC12CRTKTB7XCewU35WnzFSYm9JRT4apwk4kcKRGMv3JX6RxpGpAJeDklGHMODcVPXBMYA6kQNoTFJNmNSz@9vobu@DSf4fArfJMnkvpqZVe6uXprDp@WkNhddMf" rel="noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
 <pre><code>Ｆ²
 </code></pre>
 <p>Loop twice.</p>
