--- a/q/275596.html
+++ b/q/275596.html
@@ -26,20 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>028</td><td>APLDyalog Unicode</td><td>240918T161407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275615#275615">akamayu</a></td></tr>
-<tr d-ix="1"><td>039</td><td>Charcoal</td><td>240919T155240Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275645#275645">Neil</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Jelly</td><td>240918T130840Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275611#275611">Jonathan</a></td></tr>
-<tr d-ix="3"><td>019</td><td>05AB1E</td><td>240918T080738Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275605#275605">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>059</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
+<tr d-ix="0"><td>087</td><td>Python 3</td><td>240930T074255Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275879#275879">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>028</td><td>APLDyalog Unicode</td><td>240918T161407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275615#275615">akamayu</a></td></tr>
+<tr d-ix="2"><td>039</td><td>Charcoal</td><td>240919T155240Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275645#275645">Neil</a></td></tr>
+<tr d-ix="3"><td>014</td><td>Jelly</td><td>240918T130840Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275611#275611">Jonathan</a></td></tr>
+<tr d-ix="4"><td>019</td><td>05AB1E</td><td>240918T080738Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275605#275605">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>059</td><td>JavaScript ES6</td><td>240917T223816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275596/fractions-nobody-needs-because-they-can-be-reduced-to-a-simpler-form/275599#275599">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>29</strike> 28 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 87 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>import math
+a=4;b=2
+while 1:math.gcd(a,b)&gt;1==print(f'{a-b}\n{b}');a+=b&lt;3;b=[b,a][b&lt;3]-1
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/PzO3IL@oRCE3sSSDK9HWxDrJ1oirPCMzJ1XB0AokqJeenKKRqJOkaWdoa1tQlJlXopGmXp2om1Qbk1edVKuuaZ2obZtkYwzUGJ2kkxgbDWTH6hr@/w8A" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Here, output is like</p>
+<pre class="lang-python prettyprint-override"><code>2
+2
+2
+4
+3
+3
+</code></pre>
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 79 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>import math
+a=4;b=2
+while 1:math.gcd(a,b)&gt;1==print(a-b,b);a+=b&lt;3;b=[b,a][b&lt;3]-1
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/PzO3IL@oRCE3sSSDK9HWxDrJ1oirPCMzJ1XB0AokqJeenKKRqJOkaWdoa1tQlJlXopGomwTkWydq2ybZGAM1RCfpJMZGA9mxuob//wMA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Here, output is like</p>
+<pre class="lang-python prettyprint-override"><code>2 2
+2 4
+3 3
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup><strike>29</strike> 28 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>-1 byte by replacing <code>()</code> with an <code>¨</code> on <code>,¨∘⌽⍨∘⍸</code></p>
 <p>Prints the first n pairs.</p>
 <pre><code>{⍵↑⊃,⌿,¨∘⌽⍨∘⍸¨1≠∨∘⌽⍨¨⍳¨⍳⍵+9}
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=C3nUNqH6Ue8uIPWoa/Gj7pZHXc0gvo66grrOo96ttfqPeqceWgEUUU9TB/LVH7VNUtcAaYCirZq1CgoA&amp;c=q37Uu/VR28RHXc06j3r26xxa8ahjxqOevY96wYzeHYdWGD7qXPCoAyEOVNK7GUwAtWpb1gIA&amp;f=K1F41DZBIU0hhOtR28SSQyse9W62AAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 39 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 39 bytes</h1>
 <pre><code>ＮθＷ‹Ｌυθ«→ＦΦ…²ⅈ⊙…²ⅈ¬∨﹪ⅈμ﹪κμ⊞⊞Ｏυκ⁻ⅈκ»Ｉ…υθ
 </code></pre>
 <p><a href="https://tio.run/##XY7NCsIwEITP9ily3EC99CR6EkEQtC2evMYam9CYbfOjiPjscYOeXNiBGb5ht1PCdShMSjs7xlDH21k6mPiqeChtJIO99J7E9kFB5CWbOGevYnbAu4TlUfcqEDu7omOw1SZQ@ShsL6Eq2Qk4Fdb2@R/VGKBxcMBLNAiUlexG@/NDdnlYG72CLM0onQjoIJZsyKS20X@LA6f776J12gbYCE/y7IzcKBwzTe/yVUrVIs3v5gM" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>n</code> as input and outputs the first <code>n</code> elements. Explanation:</p>
@@ -62,7 +91,7 @@
 </code></pre>
 <p>Output the first <code>n</code> elements.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>żṚṄ€g/Ḋ$¡€ṛŻ‘ß
 </code></pre>
 <p>A full program that prints the sequence values forever.</p>
@@ -84,7 +113,7 @@
              ß - call this link again with X set to {that}
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>∞εL¨Ryδ‚ʒ¿≠}εηíÆR€,
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275599/52210"><em>@Arnauld</em>'s JavaScript answer</a>, so make sure to upvote that answer as well!<br />
@@ -111,7 +140,7 @@ Also outputs the infinite sequence on separated newlines.</p>
          , #    Output it with trailing newline
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 59 bytes</h1>
 <p><em>-13 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a>!</em></p>
 <p>Prints the sequence indefinitely.</p>
 
