--- a/q/242780.html
+++ b/q/242780.html
@@ -26,14 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Jelly</td><td>220213T085715Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242782#242782">emanresu</a></td></tr>
-<tr d-ix="1"><td>085</td><td>R</td><td>220214T141730Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242822#242822">Kirill L</a></td></tr>
-<tr d-ix="2"><td>016</td><td>Vyxal</td><td>220213T090319Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242784#242784">emanresu</a></td></tr>
-<tr d-ix="3"><td>076</td><td>Python 3 with numpy</td><td>220213T113920Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242787#242787">m90</a></td></tr>
-<tr d-ix="4"><td>091</td><td>Python 3.8</td><td>220213T112621Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242786#242786">m90</a></td></tr>
-<tr d-ix="5"><td>032</td><td>Charcoal</td><td>220213T084732Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242781#242781">Neil</a></td></tr>
+<tr d-ix="0"><td>111</td><td>Scala 3</td><td>240930T115738Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/275886#275886">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Jelly</td><td>220213T085715Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242782#242782">emanresu</a></td></tr>
+<tr d-ix="2"><td>085</td><td>R</td><td>220214T141730Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242822#242822">Kirill L</a></td></tr>
+<tr d-ix="3"><td>016</td><td>Vyxal</td><td>220213T090319Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242784#242784">emanresu</a></td></tr>
+<tr d-ix="4"><td>076</td><td>Python 3 with numpy</td><td>220213T113920Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242787#242787">m90</a></td></tr>
+<tr d-ix="5"><td>091</td><td>Python 3.8</td><td>220213T112621Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242786#242786">m90</a></td></tr>
+<tr d-ix="6"><td>032</td><td>Charcoal</td><td>220213T084732Z</td><td><a href="https://codegolf.stackexchange.com/questions/242780/real-world-progress-bar/242781#242781">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 111 bytes</h1>
+<p>A Scala port of @m90's Python answer.</p>
+<hr />
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=VVC9TsMwEN7zFKew2CU1_VlQaZCQGEBKFxBSpSqK3NRujRy7ci4gqPokLF3owhP1bbDTMCCd7-873313X8e65JqPfxZx39h37kycn0pVba1DaCHWoNLsiZuVraLILl9FiTDjysAuigDeuAZfVjaao3jg9WZCHg0mkKkaF63yYZ4n4A1Nb5_RKbOGFL4blP3rkyVZMk8CsgudZDpnFd-SgvnZJhMSyYCS4rKgDLnSlEk_BoW5iS_iHplx3DBnG7MiWU-y0ntIimmKvtre22apxZVktfoUIREI7LuxB4CVkFD5NQh363oCd87xj8WZXk4n8GIUepo7vyKAtA6IgmkfhoAWhgPaAQBb_wG1If9uQEaD8wVIq0YJBKFdbpxAkL_Qd_OuorTtuI_C63geDmf7Cw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>(L,X,t)=&gt;{val f=X.map(_.scanLeft(0)(_+_).tail).flatten;&quot;#&quot;*(Math.round(L*f.count(_&lt;=t).toDouble/f.size).toInt)}
+</code></pre>
+<p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=XZLPSgMxEMbB4z7Fh16yum5rvUipB1FEoV4URZBS0m3WRrJJ2Z0IKn0SL170oXwaJ-m2WiHkz0zmNx8z8_7VFNLIw4-PT0_l_tH3ltTV3NWEaM89aZNfSzt1VZK4yZMqCFdSW7wlwFSV4F-FN5LUhWxmYtjHpaUM930MdUMPcWPLaJSBoi_t44ZqbR9xHBnAszQofBUg-lnd-Kph131eybkY56zCDlVJopuKMfYwTnOS2qTodHC6Sv0nHA3Hr7ElG0lZNW2pm2ny1h1Y5-2VZgqGRcOV8fxlVUraO2m8Ys4GNy-ct8TqBscglufOnJ8Yhc6_b41-VZuyAzKwvUpimu2dbexCXEma5TVDp2LI73XiwA4VDJBrRb5eyp1x4dHEmjJlkbSNqbhLQtaPTR8ndS1fHpZlH3EDbq2mdflLV0NoDPZxAHI46KatA5hzABkrNnvc62axuSJuvQxhpa3tMENYqyfT-KrTNBIXUd9iOWntwK0G7wc" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>import scala.util.Random
+
+object Main {
+  def calculateHash(L: Int, X: List[List[Int]], t: Int): String = {
+    val cumulativeSums = X.map(_.scanLeft(0)(_ + _).tail) // Calculate cumulative sums
+    val flattenedSums = cumulativeSums.flatten // Flatten the list of lists
+    val meanValue = flattenedSums.count(_ &lt;= t).toDouble / flattenedSums.size // Calculate mean value
+
+    &quot;#&quot; * (Math.round(L * meanValue).toInt) // Return the hash string
+  }
+
+  def main(args: Array[String]): Unit = {
+    for (i &lt;- 1 to 10) {
+      println(calculateHash(20, List(List(2, 2, 2), List(3, 3, 3), List(10)), i))
+    }
+  }
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 13 bytes</h1>
 <pre><code>ÄṬSÄ÷Ṁ$×+.ḞRG
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8//9wy8Oda4IPtxze/nBng8rh6dp6D3fMC3L/Hx1tqGOkYxyrE22kY6JjDqZRIFDEUsfQAEgZ6hjqGAMFYg8vNzb4DwA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -64,13 +91,13 @@
            RG  Format into a grid
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 85 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>\(L,x)barplot(sapply(max(u&lt;-unlist(Map(cumsum,x))):1,\(i)(.5+mean(u&lt;=i)*L)%/%1),ho=T)
 </code></pre>
 <p><a href="https://rdrr.io/snippets/embed/?code=f%3Dfunction(L%2Cx)barplot(sapply(max(u%3C-unlist(Map(cumsum%2Cx)))%3A1%2Cfunction(i)(.5%2Bmean(u%3C%3Di)*L)%25%2F%251)%2Cho%3DT)%0A%0Af(20%2Clist(c(2%2C2%2C2)%2Cc(3%2C3%2C3)%2C10))%0Af(8%2Clist(c(1%2C1)%2C2%3A1%2C3%3A2%2Cc(12%2C1)))%0Af(30%2Clist(c(1%2C2%2C3)%2Cc(2%2C4%2C7)%2Crep(2%2C8)%2C9%3A10%2Cc(1%2C1%2C3%2C2)))" rel="nofollow noreferrer">Try it on rdrr.io!</a> with graphical output, but with older and longer function syntax.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 16 bytes</h1>
 <pre><code>ƛ¦Þǔ;∑¦Ḣ:G/*⌈×*⁋
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLGm8Kmw57HlDviiJHCpuG4ojpHLyrijIjDlyrigYsiLCIiLCJbWzEsMiwzXSxbMiw0LDddLFsyLDIsMiwyLDIsMiwyLDJdLFs5LDEwXSxbMSwxLDMsMl1dXG4zMCJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -86,7 +113,7 @@
              ×*⁋ # Make a bar graph
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a> with <a href="https://numpy.org/" rel="nofollow noreferrer">numpy</a>, 76 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a> with <a href="https://numpy.org/" rel="nofollow noreferrer">numpy</a>, 76 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda L,X,t:int(L*mean(t&gt;=hstack(map(cumsum,X)))+.5)*'#'
 from numpy import*
@@ -94,13 +121,13 @@ from numpy import*
 <p><a href="https://tio.run/##FcxBDoIwEEDRvaeYxAUdnBgKcUOCJ@AAJMiiIpVGp21Ku@D0FfMWf/f9Hldnm6y7R/4qfr4U9DRQbI2Noi95UVbEe7duUc0fwcqLOfGWmAZEvFxvWBbn4qSDY7CJ/Q6GvQuxzNoFMGAsBGXfi5AkJbbgw/@rRV0RjGNNh4nGhg5HZTVNBAYx/wA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p><code>cumsum</code> transforms a list of step lengths into an array of the steps' finishing times, and <code>hstack</code> combines those arrays into one long array. The comparison produces 1 for finished steps and 0 for unfinished steps, and then <code>mean</code> gives the proportion of finished steps.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8</a>, 91 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8</a>, 91 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda L,X,t:int(sum((s:=0)+sum(t&gt;=(s:=s+y)for y in x)for x in X)*L/sum(map(len,X))+.5)*'#'
 </code></pre>
 <p><a href="https://tio.run/##HY1RCoMwEESvstAPs7q0RikUwZ7AAwSsHynVNqAxJCno6VO3zMe8gQfj9vhZbX1zPk3tI816eb40dKQoNsZGEb6LEKFpSywY473lFYodp9XDDsbC9seNUWHeXdhbtBPzaEkhFucr5tkpS2wZtry271FIkhIbcJ5vJlGVBH1f0ZGB@pqOHC3LYSAwiOkH" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
 <pre><code>Ｅ⌈ＥηΣι⁺·⁵∕×ΣＥηΣＥλ¬›Σ…λ⊕ξ⊕ιθΣＥηＬλ
 </code></pre>
 <p><a href="https://tio.run/##VU3BCsIwFPuVHlt4ypx48jhBBJXBvJUeyvawhbbTrhvz62tXBJXweCEJSaukb3tpYqy9doFe5CPdrO1oM1dAmkQ1YwxIbcaBFusdkIOedIf0pi0OtPnPLtQAufaBHj3KgD4nqldrsFJ9Nk@u9WjRBezonLt/lWWNZfXJvp2p/ozuHhQ1H38fIy8L4LyEBAF8CwnpbwohRFxN5g0" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a bar graph. Explanation:</p>
